[package]
name = "elasticsearch"
version = "7.10.0-alpha.1"
edition = "2018"
authors = ["Elastic and Contributors"]
description = "Official Elasticsearch Rust client"
repository = "https://github.com/elastic/elasticsearch-rs"
keywords = ["elasticsearch", "elastic", "search", "lucene"]
categories = ["api-bindings", "database"]
documentation = "https://docs.rs/elasticsearch/"
license = "Apache-2.0"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

# optional TLS
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = "^0.11"
bytes = "1"
dyn-clone = "~1"
percent-encoding = "2.1.0"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "1f425a0244bcd7b4565dceb9076450d951f2ec03", default-features = false, features = ["gzip", "json"] }
url = "2.2"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_with = "~1"
void = "1.0.2"

[dev-dependencies]
chrono = { version = "^0.4", features = ["serde"] }
clap = "~2"
failure = "0.1.5"
futures = "0.3.1"
http = "0.2"
hyper = { version = "0.14.2", default-features = false, features = ["tcp", "stream"] }
os_type = "2.2"
sysinfo = "0.12.0"
textwrap = "^0.11"
tokio = { version = "1.0.1", default-features = false, features = ["macros", "net", "time"] }
xml-rs = "^0.8"

[build-dependencies]
rustc_version = "0.2"